fixed overlapping navbar issue located in buyerNavStyles by removing position: fixed; from container div. Also, looks like the previous team tried to account for no searchData being provided to the useSearch custom hook, but didn't handle cases where it was undefined. I added the necessary logic to make it functional.

--- a/src/components/common/buyerNavBar/buyerNavStyles.css
+++ b/src/components/common/buyerNavBar/buyerNavStyles.css
@@ -9,7 +9,6 @@ svg{
 
 .buyer-nav-container{
     background-color: rebeccapurple;
-    position: fixed;
     width: 100%;
     top: 0;
     z-index: 4;
@@ -40,4 +39,6 @@ svg{
     justify-content: space-evenly;
 }
 
-
+.searchBtns{
+    position: fixed;
+}
